--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,74 @@
 
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
+
+# Eclipse
+.classpath
+.project
+.settings/
+ 
+# Intellij
+.idea/
+*.iml
+*.iws
+ 
+# Mac
 .DS_Store
+ 
+# Maven
+log/
+target/
+*.MF
+
+Maventest/target/classes/META-INF/MANIFEST.MF
+
+Maventest/target/classes/META-INF/maven/group39/Maventest/pom.properties
+*.properties
+*.properties
+*.MF
+*.MF
+Maventest/target/classes/META-INF/MANIFEST.MF
+*.MF
+*.properties
+Maventest/target/classes/META-INF/MANIFEST.MF
+Maventest/target/classes/META-INF/maven/group39/Maventest/pom.properties
+
+Maventest/target/classes/GUI_Test.class
+
+*.class
